Updated Home page with some user links

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,9 @@
 <h1>Finchu - The Home Page</h1>
 
 Read all <%= link_to 'about', about_path %> it.
+
+<% if user_signed_in? %>
+  You are signed in as <%= current_user %>.
+<% else %>
+  You are not signed in.
+<% end %>
